feat:添加ts教程的第一部分

--- a/typescript-tutorial/test.html
+++ b/typescript-tutorial/test.html
@@ -11,6 +11,6 @@
     <button id="btn">+</button>
     <h4>相加的和为<span></span></h4>
 
-    <script src=""></script>
+    <script src="./first-ts.js"></script>
   </body>
 </html>
