--- a/src/JavaScript高级程序设计 第4版/form.html
+++ b/src/JavaScript高级程序设计 第4版/form.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <!-- <script src="./index.js"></script> -->
-    <script src="./fetch.js"></script>
+    <form action="" method="get" id="form1"></form>
+    <form action="" id="form2"></form>
+    <script>
+      console.log(document.forms);
+    </script>
   </body>
 </html>
